[WebApp] Ajout des boutons copy et boot

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -7,13 +7,16 @@
 		<script src="js/jquery.min.js" language="javascript"></script>
 		<script src="js/main.js" language="javascript"></script>
 		<link rel="stylesheet" href="css/style.css" />
-		
-		
-		
+
 	</head>
 	<body>
+		<div id="install" hidden>
+			<input id="copy" class="install" type="button" value="COPY"/>
+			<input id="boot" class="install" type="button" value="BOOT"/>
+		</div>
+
 		<header>
-			<h1>GNU DSTROS</h1>
+			<h1>GNU DISTRO</h1>
 		</header>
 
 		<nav id="filter">
