[WebApp] Choix d'installation

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -10,7 +10,7 @@
 
 	</head>
 	<body>
-		<div id="install" hidden>
+		<div id="install" hidden style="z-index: 100000;">
 			<input id="copy" class="install" type="button" value="COPY"/>
 			<input id="boot" class="install" type="button" value="BOOT"/>
 		</div>
